agreg fin de juego

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body>
     
     <div>
-        <h1 >Buscar: <img src="" alt="" id="buscar"></h1>
+        <h1 type="text" id="text">Buscar: <img src="" alt="" id="buscar"></h1>
         <a href="#"><img src="img/avisual20.jpg" alt="" id="map" ismap="ismap"></a>
         <h4><a href="ayuda.html" target="_blanck">Ayuda</a></h4>
         <p></p>     
     </div>
+
+    <span></span>
 
     <script src="scripts/mapa.js"></script>
     <script type="text/javascript" src="scripts/game.js"></script>
