--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <p></p>     
     </div>
 
-    <script src="scripts/mapa.js"></script>
+
+    <!-- <script src="scripts/mapa.js"></script>--> <!-- ************** con if-esle-->
+    <script src="scripts/mapa2.js"></script>         <!-- ************** con switch -->
     <script type="text/javascript" src="scripts/game.js"></script>
     
 </body>
