--- a/ayuda.html
+++ b/ayuda.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div>
-        <img src="/img/avisual.jpg" alt="">
+        <img src="img/avisual.jpg" alt="">
     </div>
 </body>
 </html>
