--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div>
         <h1 type="text" id="text">Buscar: <img src="" alt="" id="buscar"></h1>
-        <a href="#"><img src="img/avisual20.jpg" alt="" id="map" ismap="ismap"></a>
+        <a href="#"><img src="/img/avisual20.jpg" alt="" id="map" ismap="ismap"></a>
         <h4><a href="ayuda.html" target="_blanck">Ayuda</a></h4>
         <p></p>     
     </div>
